--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
     <link rel="stylesheet" href="style.css">
+    <title>Web App - Simple Interest Calculator</title>
     </head>
     <body>
         <div id="main_div">
